--- a/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
+++ b/src/app/saletran/tkt-sale-item/tkt-sale-item.component.html
@@ -5,7 +5,8 @@
                 <thead>
                     <tr>
                         <td><h4>Sale Item</h4></td>
-                        <td><h4>Quantity</h4></td>
+                        <td *ngIf="!allowTips"><h4>Quantity</h4></td>
+                        <td *ngIf="allowTips"><h4>Serviced By</h4></td>
                         <td class="rightjustfy"><h4>Unit Price</h4></td>
                         <td class="rightjustfy"><h4>Total Price</h4></td>
                     </tr>
@@ -19,23 +20,29 @@
                                     <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
                                 </svg>
                             </button>
+                            <div>
                             <h4><span class="label label-default">&nbsp; {{itm.quantity}} &nbsp;</span></h4>
                             <button type="button" class="btn-primary btn" id="btnp{{i}}" (click)="btnPlusClicked($event, i);">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-plus-lg" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd" d="M8 2a.5.5 0 0 1 .5.5v5h5a.5.5 0 0 1 0 1h-5v5a.5.5 0 0 1-1 0v-5h-5a.5.5 0 0 1 0-1h5v-5A.5.5 0 0 1 8 2Z" />
                                 </svg>
-                            </button>
+                            </button></div>
                         </div>
                     </td>
                     <td *ngIf="allowTips">
-                        <label for="ddlAssociate">Associate</label>
-                        <select #ddlAssociate id="ddlAssociate" class="form-control dropdown" (change)="onAssociateChange($event, +ddlAssociate.value)">
-                            <option *ngFor="let loc of SaleAssocList"
-                                    value="{{loc.IndividualUID}}">
-                                {{loc.FirstName + ' ' + loc.LastName}}
-                            </option>
-                        </select>
+                        <div class="row">
 
+                            <button type="button" style="width:10%;" class="btn-primary btn" id="btnm{{i}}" (click)="btnMinusClicked($event, i);">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash-lg" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M2 8a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11A.5.5 0 0 1 2 8Z" />
+                                </svg>
+                            </button><div style="width:1%"></div>                   
+                            <select #ddlAssociate id="ddlAssociate_{{itm.salesItemUID}}_{{i}}" style="width:89%;" class="form-control dropdown" (change)="onAssociateChange($event, +ddlAssociate.value)">
+                                <option *ngFor="let loc of itm.locAssociateList" value="{{loc.individualUID}}" [selected]="loc.individualUID == indivId">
+                                {{loc.firstName + ' ' + loc.lastName}}
+                                </option>
+                            </select>
+                        </div>
                     </td>
                     <td class="rightjustfy">
                         <h4><label class="label label-default">{{itm.unitPrice | number:'1.2-2'}}</label></h4>
