Checkout page display issues fixed

--- a/src/app/saletran/checkout/checkout-items/checkout-items.component.html
+++ b/src/app/saletran/checkout/checkout-items/checkout-items.component.html
@@ -23,19 +23,19 @@
                         <h4><span class="label label-default">&nbsp; {{itm.firstName + ' ' + itm.lastName}} &nbsp;</span></h4>
                     </td>
                     <td class="rightjustfy">
-                        <h4><label class="label label-default">{{itm.unitPrice | number:'1.2-2'}}</label></h4>
+                        <h4><label class="label label-default">{{itm.unitPrice }}</label></h4>
                     </td>
                     <td class="rightjustfy">
-                        <h4><label class="label label-default">{{itm.discount | number:'1.2-2'}}</label></h4>
+                        <h4><label class="label label-default">{{itm.discount }}</label></h4>
                     </td>
                     <td class="rightjustfy">
-                        <h4><label class="label label-default">{{itm.exchCoupon | number:'1.2-2'}}</label></h4>
+                        <h4><label class="label label-default">{{itm.exchCoupon }}</label></h4>
                     </td>
                     <td class="rightjustfy">
-                        <h4><label class="label label-default">{{itm.saleTax | number:'1.2-2'}}</label></h4>
+                        <h4><label class="label label-default">{{itm.saleTax }}</label></h4>
                     </td>
                     <td class="rightjustfy">
-                        <h4><label class="label label-default">{{itm.unitPrice * itm.quantity | number:'1.2-2'}}</label></h4>
+                        <h4><label class="label label-default">{{itm.unitPrice * itm.quantity }}</label></h4>
                     </td>
                 </tr>
             </table>
