--- a/src/app/saletran/customer-search/customer-search.component.html
+++ b/src/app/saletran/customer-search/customer-search.component.html
@@ -21,6 +21,7 @@
                      (click)="customerSelected(cust.customerUID)" >{{cust.cFirstName + ' ' + cust.cLastName}}</button>
             </div>
         </div>
+
     </modal-content>
     <modal-footer>
         <div class="row">
@@ -29,7 +30,7 @@
             <button class="btn btn-info" (click)="newcust()">New Customer</button>&nbsp;
         </div>
     </modal-footer>
-    <div *ngIf="showErrMsg" class="alert alert-dismissible fade" role="alert">
+    <div *ngIf="showErrMsg">
         <div class="strongmsg">{{strongErrMessage}}</div><div class="errmsg">{{errMessage}}</div>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
