sale item quantity change

--- a/src/app/saletran/checkout/tips-modal-dlg/tips-modal-dlg.component.html
+++ b/src/app/saletran/checkout/tips-modal-dlg/tips-modal-dlg.component.html
@@ -7,7 +7,7 @@
             <tr><th>Serviced By</th><th>Tip</th></tr>
         <tr *ngFor="let assoc of saleAssocList; let i = index;" class="form-group">
             <td><label>{{assoc.firstName + ' ' + assoc.lastName}}</label></td>
-            <td><input type="number" class="dc saleassocid form-control" id="dc{{assoc.individualUID}}" [ngModel]="assocSaleTips[i].tipAmount | number: '0.2-2'" (change)="onTipChanged()" /></td>
+            <td><input type="number" class="dc saleassocid form-control" id="dc{{assoc.individualUID}}" [ngModel]="assocSaleTips[i].tipAmount | number: '0.2-2'" (change)="onTipChanged($event)" /></td>
             <!-- <td><input type="number" class="ndc saleassocid form-control" id="ndc{{assoc.individualUID}}" [ngModel]="assocSaleTips[i].tipAmtLocCurr | number: '0.2-2'" /></td> -->
         </tr>
         <tr>
