--- a/src/app/saletran/checkout/tips-modal-dlg/tips-modal-dlg.component.html
+++ b/src/app/saletran/checkout/tips-modal-dlg/tips-modal-dlg.component.html
@@ -5,15 +5,15 @@
     <modal-content>
         <table class="table table-striped">
             <tr><th>Serviced By</th><th>Tip</th></tr>
-        <tr *ngFor="let assoc of saleAssocList; let i = index;" class="form-group">
+        <tr *ngFor="let assoc of assocSaleTips;" class="form-group">
             <td><label>{{assoc.firstName + ' ' + assoc.lastName}}</label></td>
-            <td><input type="text" appTwoDigitDecimalDirective class="dc saleassocid form-control" id="dc{{assoc.individualUID}}" [ngModel]="assocSaleTips[i].tipAmount" (change)="onTipChanged($event)" /></td>
+            <td><input type="text" TwoDigitDecimalDirectiveDirective class="dc saleassocid form-control" id="dc{{assoc.tipAssociateId}}" [ngModel]="assoc.tipAmount" (change)="onTipChanged($event)" /></td>
             <!-- <td><input type="number" class="ndc saleassocid form-control" id="ndc{{assoc.individualUID}}" [ngModel]="assocSaleTips[i].tipAmtLocCurr | number: '0.2-2'" /></td> -->
         </tr>
         <tr>
             <td><label>Total:</label></td>
             <td>
-                <input type="text" appTwoDigitDecimalDirective class="dc saleassocid form-control" id="dcTotal" value="{{dcTotal}}" (change)="onTotalAmountChanged($event)" />
+                <input type="text" TwoDigitDecimalDirectiveDirective class="dc saleassocid form-control" id="dcTotal" value="{{dcTotal}}" (change)="onTotalAmountChanged($event)" />
             </td>
             <!-- <td>
                 <input type="number" class="ndc saleassocid form-control" id="ndcTotal" value="{{ndcTotal}}" />
