--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,12 +20,14 @@
           </li>
         </ul>
         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-           <!-- <li class="nav-item"><a href="#" class="nav-link">Login <i class="fa fa-user" aria-hidden="true"></i></a></li>
-          <li class="nav-item"><a href="#" class="nav-link">Signup <i class="fa fa-user-plus" aria-hidden="true"></i></a></li> -->
         </ul>
+
       </div>
     </div>
-  </nav>
+    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+      <a class="nav-link" href="#" id="lnkLogout" (click)="vlogout()" >Logout</a>
+    </ul>
+</nav>
 
   <div class="container-fluid">
       <router-outlet></router-outlet>
