--- a/src/app/saletran/checkout/checkout-page/checkout-page.component.html
+++ b/src/app/saletran/checkout/checkout-page/checkout-page.component.html
@@ -19,13 +19,13 @@
                 <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
             </svg> Customer
         </button>
-        <div >
+        <button *ngFor="let tndr of _displayTenders" class="border border-white btn btn-info btn-lg ftrbtn" id="{{tndr.tenderTypeCode}}"  [ngStyle]="{width: tenderButtonWidthPercent + '%'}" aria-label="Left Align" (click)="btnTndrClick($event)">                    
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
+            </svg> {{tndr.tenderTypeDesc}}
+        </button>        <div >
             <div >
-                <button *ngFor="let tndr of _displayTenders" class="border border-white btn btn-info btn-lg ftrbtn" id="btn{{tndr.tenderTypeCode}}"  [ngStyle]="{width: tenderButtonWidthPercent + '%'}" aria-label="Left Align" (click)="btnTndrClick($event, 'MS')">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                        <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"></path>
-                    </svg> {{tndr.tenderTypeDesc}}
-                </button>
+
         
             </div>
         </div>
